--- a/RecipeMatch/Base.lproj/Main.storyboard
+++ b/RecipeMatch/Base.lproj/Main.storyboard
@@ -548,19 +548,19 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xZj-kk-PHs">
                                     <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="70" height="70"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridRecipeCell" id="EJA-EM-3MB" customClass="GridRecipeCell">
-                                        <rect key="frame" x="0.0" y="50" width="128" height="205"/>
+                                        <rect key="frame" x="0.0" y="70" width="128" height="205"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2mr-aH-vne">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="205"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Vj-hI-Fkc">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Vj-hI-Fkc">
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="180"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="180" id="2bk-Ol-YfA"/>
@@ -590,14 +590,11 @@
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="SearchView" id="Anc-B9-LUM" customClass="SearchCollectionReusableView">
-                                    <rect key="frame" x="0.0" y="0.0" width="404" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="404" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <searchBar contentMode="redraw" placeholder="Search recipes" translatesAutoresizingMaskIntoConstraints="NO" id="Vh2-rT-eFv">
-                                            <rect key="frame" x="0.0" y="0.0" width="404" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="50" id="Ken-mE-z1u"/>
-                                            </constraints>
+                                            <rect key="frame" x="0.0" y="0.0" width="404" height="70"/>
                                             <textInputTraits key="textInputTraits"/>
                                             <connections>
                                                 <outlet property="delegate" destination="eF4-Nv-xXS" id="UCE-oc-tid"/>
